--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-21  Chris Toshok  <toshok@ximian.com>
+
+	* frontend/Main.cs: Fix command line parsing so that it correctly
+	allows for all of the following forms: "/arg:value", /arg value",
+	"-arg:value", "-arg value", "/arg", and "-arg" (and prints out a
+	usage message if it fails to parse a particular arg/value).
+
 2005-01-14  Chris Toshok  <toshok@ximian.com>
 
 	* frontend/Completer.cs (Completer.SymbolCompleter): attempt to
