--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Chris Toshok  <toshok@ximian.com>
+
+	* classes/MethodSource.cs: nuke unused comment.
+
 2005-02-01  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
