--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-02-10  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono/MonoCSharpLanguageBackend.cs: Renamed to
+	MonoLanguageBackend.cs.	
+
+2005-02-10  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetTypeInfo.cs: New file.
 
 	* interfaces/ITargetType.cs (ITargetType): Moved `HasFixedSize',
