--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-02-10  Martin Baulig  <martin@ximian.com>
 
+	* classes/TargetBinaryReader.cs (TargetBinaryReader.PeekBuffer):
+	New public method.
+
+2005-02-10  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono/MonoCSharpLanguageBackend.cs: Renamed to
 	MonoLanguageBackend.cs.	
 
