2005-02-12  Chris Toshok  <toshok@ximian.com>
        * backends/Inferior.cs (Inferior.Run): store off the delegates so
        they aren't gc'ed before passing them to
        mono_dbeugger_server_spawn.


svn path=/trunk/debugger/; revision=40564

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-02-12  Chris Toshok  <toshok@ximian.com>
 
+	* backends/Inferior.cs (Inferior.Run): store off the delegates so
+	they aren't gc'ed before passing them to
+	mono_dbeugger_server_spawn.
+
+2005-02-12  Chris Toshok  <toshok@ximian.com>
+
 	* backends/ThreadManager.cs: remove unused SymbolTableManager
 	property.
 
