--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-14  Chris Toshok  <toshok@ximian.com>
+
+	* arch/DwarfReader.cs: add documentation for many of the Debugging
+	Information Entries (DIEs), and add support for the Inheritance
+	DIE.
+
 2005-02-12  Chris Toshok  <toshok@ximian.com>
 
 	* backends/SingleSteppingEngine.cs
