--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-16  Chris Toshok  <toshok@ximian.com>
+
+	* backends/mono/MonoSymbolFile.cs,
+	backends/mono/MonoLanguageBackend.cs: split out the MonoSymbolFile
+	class and related machinery from MonoLanguageBackend.cs.
+	
 2005-02-15  Chris Toshok  <toshok@ximian.com>
 
 	* classes/Makefile.am (EXTRA_DIST): remove ISymbolFile from here.
