--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2005-02-16  Chris Toshok  <toshok@ximian.com>
 
+	* backends/mono/MonoSymbolFile.cs: rename "MonoType LookupType
+	(...)" to "MonoType LookupMonoType (...)".
+
+	* backends/mono/MonoLanguageBackend.cs: clean things up a little
+	bit, rename "MonoType LookupType (...)" to "MonoType
+	LookupMonoType (...)".
+	
+	* backends/mono/MonoFunctionType.cs: track LookupType ->
+	LookupMonoType.
+
+	* backends/mono/MonoArrayType.cs: same.
+
+	* backends/mono/MonoClass.cs: same.
+
+2005-02-16  Chris Toshok  <toshok@ximian.com>
+
 	* backends/mono/MonoSymbolFile.cs,
 	backends/mono/MonoLanguageBackend.cs: split out the MonoSymbolFile
 	class and related machinery from MonoLanguageBackend.cs.
