--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-21  Martin Baulig  <martin@ximian.com>
+
+	* backends/DaemonThreadRunner.cs: Removed this old file.
+
+	* backends/SingleSteppingEngine.cs
+	(SingleSteppingEngine.DaemonEventHandler): Removed; this isn't
+	used anymore.
+
 2005-02-20  Chris Toshok  <toshok@ximian.com>
 
 	* frontend/Makefile.am: track Tokenizer/ExpressionParser ->
