--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-09  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono/MonoLanguageBackend.cs (MonoLanguageBackend):
+	Actually implement the ILanguage's type properties.
+
 2005-03-02  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono/MonoClassType.cs (MonoClassType.get_events): new
